--- a/RO/CM/1.md
+++ b/RO/CM/1.md
@@ -61,13 +61,13 @@ Passage entre les formes :
 
 - équation vers inéquation : $$ax=b \Leftrightarrow \left\{\begin{array}{lcl}ax & \le & b\\ax & \ge & b\end{array}\right.$$
 - inéquation vers ́equation : ajouter une variable d'écart $$s$$ (pour *slack*)
-- min et max : $$\max f(x) =−\min−f(x)$$
+- min et max : $$\max f(x) = - \min - f(x)$$
 
 Forme canonique :
 
 - maximisation
 - toutes les variables sont non négatives
-- toutes les contraintes sont des inéquations du type “$$\le$$”
+- toutes les contraintes sont des inéquations du type "$$\le$$"
 
 Forme standard :
 
