--- a/RO/CM/3.md
+++ b/RO/CM/3.md
@@ -15,3 +15,6 @@ Slides : <https://caseine.org/mod/resource/view.php?id=735>
   - Avec $$M \geq x+1$$ et $$M \geq y+1$$ et $$b \in \{0, 1\}$$
   - $$x+1 \leq y + Mb$$
   - $$y+1 \leq x + M(1-b)$$
+- **Enveloppe convexe.** $$\text{conv}(x)$$
+
+> L'optimum de la relaxation linéaire (PL) est toujours plus grand que l'optimum du problème initial (PLNE) comme on autorise les fractions.
