RO - Correction tableau

--- a/RO/CM/2.md
+++ b/RO/CM/2.md
@@ -6,16 +6,16 @@ Illustration avec un vendeur de comprimés de vitamines A et C VS une famille qu
 
 ### Tableau des signes
 
-           min             |            max
-:-------------------------:|:-------------------------:
-          primal           |            dual
-           dual            |           primal
-     variable $$\geq 0$$      |      contrainte $$\leq$$
-variable $$in \mathbb{R}$$ |      contrainte $$=$$
-     variable $$\leq 0$$      |      contrainte $$\geq$$
-     contrainte $$\leq$$      |      variable $$\leq 0$$
-     contrainte $$=$$      | variable $$in \mathbb{R}$$
-     contrainte $$\geq$$      |      variable $$\geq 0$$
+|           min              |            max             |
+|:--------------------------:|:--------------------------:|
+|           primal           |            dual            |
+|            dual            |           primal           |
+|      variable $$\geq 0$$   |      contrainte $$\leq$$   |
+| variable $$in \mathbb{R}$$ |      contrainte $$=$$      |
+|      variable $$\leq 0$$   |      contrainte $$\geq$$   |
+|      contrainte $$\leq$$   |      variable $$\leq 0$$   |
+|      contrainte $$=$$      | variable $$in \mathbb{R}$$ |
+|      contrainte $$\geq$$   |      variable $$\geq 0$$   |
 
 ### Trois théorèmes de dualité
 
