TR - CM lundi 18/11/2019

--- a/TR/CM/3.md
+++ b/TR/CM/3.md
@@ -44,7 +44,85 @@ Pour chaque point de montage, trois alternatives :
 - Comparaison des UID / GID présenté dans la requête RPC
 - Par défaut une requête "root" est déclassée en utilisateur "nobody" à faible privilèges.
 
-Systèmes d'annuaires pour la destion d'accès aux attributs des utilisateurs : DAP, NIS (*Network Information System*)
+Systèmes d'annuaires pour la gestion d'accès aux attributs des utilisateurs : DAP, NIS (*Network Information System*)
 
+## Amélioration des performances
 
-.
+### Cache client
+
+Soit $$T_n = n \times T_{\text{RPC}}$$
+
+$$
+T_{\text{idéal pour } n \text{ accès}} = (1)T_{\text{RPC}} + (n-1)T_{\text{accès cache}}
+$$
+
+Généralement, $$T_{\text{RPC}} >> T_{\text{accès cache}}$$.
+
+Sémantique d'accès aux fichiers sous Unix (POSIX), pas d'accès exclusif par défaut.
+
+> **Accès exclusif.** Plusieurs utilisateurs avec les bons droits peuvent accéder au même fichier en même temps.
+
+Un client qui écrit une nouvelle valeur (dans son cache) mais elle n'est pas encore transmise au serveur.
+
+Écriture synchrone VS écriture retardée, asynchrone
+
+Lecture d'une ancienne valeur de A :
+
+1. Le client peut interroger le serveur si une nouvelle valeur est disponible à chaque accès
+    - Coûte beaucoup en RPC
+2. Interrogation sur les blocs de données toutes les X secondes
+3. **Callbacks.** Les clients indiquent au S qu'ils sont intéressés par certains blocs de données
+    - Le serveur peut les alerter si un autre client modifie ces blocs
+    - Introduction d'état sur le serveur
+      - État temporaire via la notion de bail (*lease*)
+      - Intérêt en cas de crash : le serveur attend la durée d'un bail avant de rétablir le service
+
+**NFSv3.** Écriture asynchrone + synchronisation toutes les 30 secondes.
+
+## IPv6
+
+### Comparaison avec IPv4
+
+IPv4 est inchangé depuis les années 70 alors qu'Internet double tous les ans ce qui conduit à un épuisement des adresses IPv4, d'où le besoin de l'IPv6.
+
+Leçons apprises d'IPV4 :
+
+- Les adresses doivent être plus longues
+- LEs adresses doivent être distribuées avec une granularité plus fine, pas de classes (CIDR)
+- IPv6 doit permettre un routage hiérarchique pour permettre une agrégation efficace pour les tables de routage (du cœur du réseau).
+
+### Quelques caractéristiques
+
+- Adresses de 128 bits (16 octets)
+  - Ça donne $$340 \times 10^{36}$$ adresses, à titre de comparaison :
+    - 1 million d'adresses prises toutes les micro secondes prendrait 20 ans
+    - plusieurs milliers d'adresses par mètre carré sur Terre
+- Une partie de l'adresse peut être l'adresse MAC (IEEE 802)
+  - Mécanisme d'auto-configuration
+- 3 types d'adresses :
+  - **Unicast.** Une machine
+  - **Multicast.** Un groupe de machines
+  - **Anycast.** Une machine parmi un groupe portant le même préfixe
+- Pas de checksum
+- En-tête simplifié :
+  - Nombre de champs réduit de moitié
+  - Extension de l'en-tête par en-tête optionnel (chaînage)
+  - 40 octets dont 32 d'adresse
+
+```text
+----------------------------------------------------
+| version | classe trafic |    étiquette de flot   |
+|    longueur données     | prochain en-tête | TTL |
+|                @ SRC (16 octets)                 |
+|                @ DST (16 octets)                 |
+|                     Données                      |
+----------------------------------------------------
+```
+
+### Représentation des adresses (RFC 1884)
+
+Exemple : `FEDC:BA10:7565:...:2F45` (16 fois 8 bits)
+
+Format compressé : `FF01:0:0:...43`
+
+Adresse compatible IPv4 : `0:0:0:...: 139.10.50.60
