II - CM mercredi 20/11/2020

--- a/II/CM/2.md
+++ b/II/CM/2.md
@@ -224,12 +224,12 @@ ListView   Toolbar
         Button Button
 ```
 
+**Containers** : connaissent leurs enfants (et leur taille préférée)
 
-
-
-
-
-
-
-
-.
+- **Widgets**
+  - **intéractifs** (`javafx.scene.control.___`) : `SplitPane` (2+ enfants), `TabPane` (N enfants), `ScrollPane` (1 enfant), `ToolBar`, `MenuBar`...
+  - **non intéractifs** (`javafx.scene.layout.___`) : `BorderPane` (5- enfants : Top, Right, Bottom, Left, Center)
+  - `HBox`, `Vbox` (N enfants)
+  - `FlowPane` (N enfants)
+  - `GridPane` (N enfants)
+  - etc.
