TR - CM lundi 25/11/2019

--- a/TR/CM/3.md
+++ b/TR/CM/3.md
@@ -125,4 +125,51 @@ Exemple : `FEDC:BA10:7565:...:2F45` (16 fois 8 bits)
 
 Format compressé : `FF01:0:0:...43`
 
-Adresse compatible IPv4 : `0:0:0:...: 139.10.50.60
+Adresse compatible IPv4 : `0:0:0:...: 139.10.50.60`
+
+### Nouvelles fonctionnalités d'IPv6
+
+- Autoconfiguration
+- Multicast inclus de base
+- Marquage des flux (*flow label*)
+  - QoS (*quality of service*)
+  - Priorité en flux
+  - Application en temps réel (*soft*)
+- Sécurité : authentification et intégrité des données
+- Gestion de la mobilité
+- Pas d'ARP pour la traduction d'adresse IP vers adresse MAC. Remplacé par ICMPv6 (neighbor discovery)
+
+### Autoconfiguration
+
+**IPv4.** manuel ou DHCP
+
+**Objectifs.**
+
+- acquisition d'une adresse lors d'une première connexion à un réseau
+- obtention d'une nouvelle adresse lors d'un reconfiguration du réseau
+
+**Processus d'autoconfiguration.**
+
+- la création d'une adresse **lien-local** FE80::"adresse MAC"
+- la création d'une adresse **unicast** globale $\rightarrow$ préfixe fournit par le routeur
+- détermination de leur unicité (pingv-n si machine avec adresse $\rightarrow$ configuration manuelle)
+- enregistrement possible de la nouvelle adresse aupère du DNS
+
+Composition d'une adresse IPv6 :
+
+- 8 bits de poids fort (adresse multicast)
+- Géographique
+- FE (indication adressage pour utilisation locale)
+- Adresse IPv4
+- 010
+- \+ ID fournisseur = préfixe fournisseur
+- \+ ID client = préfixe client
+- \+ ID sous-réseau = préfixe réseau
+- ID machine
+
+Champs en-tête optionnels : 2 bits particuliers pour le cas où un routeur ne supporte pas ce type d'en-tête routeur
+
+- `00` : sauter option
+- `01` : destruction du paquet **sans** envoi d'ICMPv6 à la source
+- `10` : destruction du paquet **avec** envoi d'ICMPv6 à la source
+- `11` : destruction du paquet **avec** multicast
