II - CM mercredi 27/11/2019

--- a/II/CM/2.md
+++ b/II/CM/2.md
@@ -103,11 +103,19 @@ Permet de minimiser les dépendances
 
 ### Principe 3
 
-Le NF doit offrir des **services nécessaires** à l’interaction :
+D'après Fekete (1996), le NF doit offrir des **services nécessaires** à l’interaction :
 
-- la notification *(dépendance du NF à l'IU ?)* ;
-- la prévention des erreurs ; et
-- l’annulation
+- **La notification**
+  - C'est la possibilité pour un module externe d'être prévenu lorsque l'état du NF change.
+  - *Par exemple, si le système de fichiers (FS) l'implémente, une application visualisant une partie du FS peut être notifiée et réaffichée si le FS est modifié, ainsi elle est continuellement à jour.*
+- **La prévention des erreurs**
+  - C'est la possibilité de savoir si un appel de fonction est licite dans un contexte.
+  - *Par exemple, lorsque des objets graphiques sont sélectionnés, les items de menu agissant sur la sélection doivent être désactivés si leur activation produit une erreur.*
+- **L’annulation**
+  - C'est la possibilité de revenir à des états précédents du NF.
+  - *Par exemple, dans un FS pour annuler la suppression d'un fichier.*
+
+Source : <https://pdfs.semanticscholar.org/fbd6/4bfa055a8481956f89f873b079fa2f9ba140.pdf>
 
 > *Polling* l'IU "tire" l'information du NF à intervalles réguliers à l'aide d'une boucle et d'un délai pour les notifications.
 
@@ -233,3 +241,45 @@ ListView   Toolbar
   - `FlowPane` (N enfants)
   - `GridPane` (N enfants)
   - etc.
+
+*Exemple.* Examen de 2017-2018, question 7 : <http://iihm.imag.fr/blanch/INFO4/IHM/exams/2017-2018-RICM4-IHM.pdf>
+
+Éléments qui changent de taille :
+
+- VBox, HBox = ne change pas de taille quand redimentionné
+- BorderPane = change de taille quand redimentionné
+  - La partie centrale de la boîte de réception grandit avec la fenêtre
+  - Le vide au milieu de la première barre d'outils aussi
+
+```text
+         Stage (fenêtre)
+           |
+         Scene (contenu de la fenêtre)
+           |
+       BorderPane
+     top /       \ center
+      VBox     [Centre]
+     /    \
+[Barre1] [Barre2]
+
+[Barre1]
+   BorderPane
+left /    \
+  HBox    TextField
+  //|\\
+(5 Button)
+
+[Barre2]
+                  HBox
+            /    /    | \ \
+ToggleButton ComboBox (3 Button)
+
+[Centre]
+                SplitPane(H)
+          /                     \
+  BorderPane                   SplitPane(V)
+bottom /  \ center               /        \
+ FlowPane TreeTableView  TreeTableView TextArea
+  / | \
+(3 Button)
+```
