TR - CM lundi 02/12/2019

--- a/TR/CM/4.md
+++ b/TR/CM/4.md
@@ -23,12 +23,163 @@ Proxy : intermédiaire pour accéder aux serveurs web ; 2 raisons.
 
 ## Protocole HTTP 1.0
 
-Première version largement utilisée
+> Première version largement utilisée.
 
-Une connexion TCP par requête. Plusieurs connexions en parallèle possible par client.
+Une connexion TCP par requête. Plusieurs connexions en parallèle possibles par client.
+
+URI -> URL (http)
 
 3 types de requêtes (ou méthodes) :
 
 - `GET URL` récupère un document
 - `HEAD URL` renvoie l'en-tête de réponse
 - `POST` dépose des formulaires, des messages, des documents...
+
+Composition d'un requête : ligne de texte ASCII + CR (\015)/ LF (\017)
+
+### Format requête
+
+```text
+type requête (POST) url demandé (http://host/chemin) HTTP version
+entête (optionnel)
+< ligne vide
+corps de requête pour POST
+```
+
+### Réponse
+
+```text
+HTTP-version code reponse (3chiffres) phrase Réponse
+[entête]
+< ligne vide
+corps de réponse en tête + html
+```
+
+### Les entêtes
+
+De la forme *nom champ: valeurs*
+
+*user_agent*: firefox 69.1.25 Nixos
+
+*Referreer* : indique le site de provenance
+
+destinataire
+From  (email contre user agent)
+
+*if_modified_since* à retourner si le document à été modifié depuis une date donnée
+
+*pragma* traitement spécifique non standardisé
+
+#### Entête réponse
+
+```text
+date    | Location : (redirection/nouvelle URL)
+pragma  |
+serveur |
+```
+
+*entêtes* corps de réponse ou POST
+
+```text
+Content_type: text/html
+Content_length
+Content_encoding
+```
+
+*last_modified*: date de dernière modification
+
+#### Code de réponse + texte
+
+3 3chiffres
+
+1er -> 5 catégories
+
+```text
+1XX | Nom utilisé
+-------------------------------
+  Succès
+200 | OK
+204 |
+-------------------------------
+  Redirection
+301 | doc est déplacé
+304 | not modified
+-------------------------------
+  Erreur Client
+400 | Requete nul for_after
+404 | Not Found
+-------------------------------
+  Erreur serveur
+500 | Erreur interne du serveur
+501 | Not implement
+520 | Erreur
+```
+
+```text
+telnet www.yahoo.fr 80
+GET / HTTP/1.0
+...
+HTT/1.0 200 OK
+Last modified
+Content_type. text-HTML
+< doc >
+```
+
+## Différences entre HTTP/1.0 et HTTP/1.1
+
+Différences de fonctionnalités et de performances
+
+Introduction de nouveaux types de requêtes :
+
+- OPTIONS: demande au serveur les types de requête supportés
+- TRACE: Demande le retour de la requête en corps de réponse
+- PUT/DELETE:
+
+*Exemples.*
+
+```text
+POST /bin_cgi/script
+contenu des reponse du formulaires
+
+PUT /toto.html (<- la ressource à creer)
+< ... >
+```
+
+### Les sites virtuels
+
+-> entête **host**
+
+```text
+GET /index.html HTTP/.1
+```
+
+Host: lefilmdumoment.com
+
+http://F2/index.html
+
+DNS :
+
+- F1 alias S1
+- F2 alias S1
+- ...
+- F3 alias S1
+
+Connexions :
+
+- HTTP/1.0 : 1 URL par 1 connexion TCP
+- HTTP/1.1 : 1 connexion TCP par serveur pour toutes les requêtes
+
+## HTTP est un protocole sans états (ou presque)
+
+*État* important pour es applis web -> reconnaître un client entre "diront" la navigation
+
+### Cookies
+
+*Netscape : cookies.* Mécanisme de gestion d'état, RFC 2109.
+
+Le serveur envoie un cookie (chaîne de caractère arbitraire (code de l'état)). Le client (navigateur) est responsable de sa sauvgarde et le renvoie à chaque accès au serveur
+
+*Problèmes.*
+
+1. Sécurité : user/password, carte bleue
+2. Protection vie privée : traçage
