PS - CM merdi 03/12/2019

--- a/PS/CM/4.md
+++ b/PS/CM/4.md
@@ -42,6 +42,8 @@ $$
 
 ## Langage R et `ggplot2`
 
+Slides : <https://github.com/alegrand/SMPE/blob/master/lectures/lecture_R_crash_course.pdf>
+
 ```r
 library(dplyr)
 
@@ -105,3 +107,11 @@ $$
 > **IID.** Indépendants et Identiquement Distribués.
 
 Un intervalle de confiance dit qu'avec le même procédé, dans 95% des cas j'ai raison (pour 2 écart types). Les **2** écarts-types dans la formule correspondent à un intervalle autour de l'espérance. Donc plus on en met plus on aura de chances d'avoir raison comme on agrandit l'intervalle.
+
+> TCL. "Quand on somme N nombres qui suivent la même loi, on tombera sur une loi normale."
+
+Formule de l'intervalle de confiance pour un lancer de pièces :
+
+$$
+\Big[{1 \over 2} - 2 {\sigma \over \sqrt{N}} ; {1 \over 2} + 2 {\sigma \over \sqrt{N}}\Big]
+$$
