TR - CM lundi 09/12/2019

--- a/TR/CM/4.md
+++ b/TR/CM/4.md
@@ -32,7 +32,7 @@ URI -> URL (http)
 3 types de requêtes (ou méthodes) :
 
 - `GET URL` récupère un document
-- `HEAD URL` renvoie l'en-tête de réponse
+- `HEAD URL` renvoie l'entête de réponse
 - `POST` dépose des formulaires, des messages, des documents...
 
 Composition d'un requête : ligne de texte ASCII + CR (\015)/ LF (\017)
@@ -183,3 +183,62 @@ Le serveur envoie un cookie (chaîne de caractère arbitraire (code de l'état))
 
 1. Sécurité : user/password, carte bleue
 2. Protection vie privée : traçage
+
+## Cache
+
+**Problème.** Prcision de la date : à la seconde près. Pas assez précis pour certaines applications
+
+**Etag.** C'est un nouvel entête, une chaîne de caractères dite **"opaque"** (= pas de structure spécifique) qui sert pour la validation des entrées du cache (de doc).
+
+Etag peut être :
+
+- une horloge plus précise
+- un numéro de version
+- d'autres choses encore
+
+Dans HTTP/1.1 Entête pour un contrôle plus fin des caches.
+
+Cache/"requête" RANGE
+
+**max-age.** Indique le temps max qu'un document peut passer dans un cache (exemple pour un proxy)
+
+**no-cache.**
+
+## HTTP Authentication
+
+2 méthodes : basic et digest
+
+- **Basic.** Simple mais peu sécurisé, mot de passe "en clair" donc à utiliser avec une connexion HTTPS ou en phase de développement.
+  - Exemple d'entête : `Authorization : Basic XYZ157` où `XYZ157` est le résultat de `Base64("Aladdin:sesame")` (user/password)
+  - Encodage en base 64 : utilise seulement 64 caractères $$\rightarrow$$ 6 bits
+- **Digest.** le client et le serveur possèdent un secret partagé
+
+## Quelques évolutions autour d'HTTP
+
+### WEBDAV
+
+Extensions de HTTP pour la rédaction distribuée.
+
+Opérations :
+
+- Verrouillage d'accès
+- Propriétés/droits de decuments
+- Collection de documents
+
+"Services web" $$\rightarrow$$ REST API $$\rightarrow$$ $$\simeq$$ RPC du web
+
+**REST** ou *REpresentational State Transfer*. Terme inventé par Roy Fielding en 2000. C'est un style d'architecture :
+
+- URI : pour accéder aux ressources
+- HTTP : opérations essentielles de manipulation GET, PUT, DELETE, POST
+
+Code Javascript dans le document + requêtes asynchrones $$\rightarrow$$ Ajax et XMLHttpRequest
+
+### WebRTC (*Real Time Communication*)
+
+- Accès à la caméra et au microphone
+- Appel audio/vidéo
+- Échanges entre navigateurs (sans passer par un serveur)
+
+
+.
