II - Annale faite en cours

--- a/II/CM/2.md
+++ b/II/CM/2.md
@@ -95,6 +95,12 @@ Séparer le code du Noyau Fonctionnel (ou **NF**) du code de l'Interface Utilisa
   - Le "comment", dépend des périphériques
   - Développement incrémental
 
+On peut donner **trois principes** :
+
+1. Séparer UI et NF
+2. NF indépendant de UI
+3. Nf doit fournir des serrures à UI
+
 ### Principe 2
 
 Le **NF** est **indépendant** de l'**IU**. Concrètement, le NF ne doit appeler aucune fonction de l'IU (se traduit par des `import` par exemple). Mais l'IU est dépendante du NF.
@@ -241,45 +247,3 @@ ListView   Toolbar
   - `FlowPane` (N enfants)
   - `GridPane` (N enfants)
   - etc.
-
-*Exemple.* Examen de 2017-2018, question 7 : <http://iihm.imag.fr/blanch/INFO4/IHM/exams/2017-2018-RICM4-IHM.pdf>
-
-Éléments qui changent de taille :
-
-- VBox, HBox = ne change pas de taille quand redimentionné
-- BorderPane = change de taille quand redimentionné
-  - La partie centrale de la boîte de réception grandit avec la fenêtre
-  - Le vide au milieu de la première barre d'outils aussi
-
-```text
-         Stage (fenêtre)
-           |
-         Scene (contenu de la fenêtre)
-           |
-       BorderPane
-     top /       \ center
-      VBox     [Centre]
-     /    \
-[Barre1] [Barre2]
-
-[Barre1]
-   BorderPane
-left /    \
-  HBox    TextField
-  //|\\
-(5 Button)
-
-[Barre2]
-                  HBox
-            /    /    | \ \
-ToggleButton ComboBox (3 Button)
-
-[Centre]
-                SplitPane(H)
-          /                     \
-  BorderPane                   SplitPane(V)
-bottom /  \ center               /        \
- FlowPane TreeTableView  TreeTableView TextArea
-  / | \
-(3 Button)
-```
