--- a/TR/CM/1.md
+++ b/TR/CM/1.md
@@ -142,7 +142,7 @@ Longueur | Checksum
 **Définition.** Transfert fiable sur connection avec :
 
 - Contrôle des données transférées (endommagées, perdues, dupliquées)
-- Contrôle de flux $\rightarrow$ mécanisme à fenêtre pour éviter de saturer un récepteur manquant d'espace (buffer)
+- Contrôle de flux $$\rightarrow$$ mécanisme à fenêtre pour éviter de saturer un récepteur manquant d'espace (buffer)
 
 _Related._ Tube bidirectionnel de flot d'octets et approche de bout en bout (_end-to-end_).
 
